# rtm-wrapper

./: .gitignore  .readthedocs.yaml  README.md  README.rst  pyproject.toml
docs/: README.md  api.rst  conf.py  index.rst  requirements.txt
extra/sixs-bin/: .gitignore  README.md  build.py  pyproject.toml
extra/sixs-bin/src/: .gitignore
extra/sixs-bin/src/sixs_bin/: __init__.py
notebooks/: examples.ipynb  oot_examples.ipynb  py6s_outputs.ipynb  sweep_example.ipynb  sweep_py6s_comparison.ipynb
src/rtm_wrapper/: _6s.py  __init__.py  execution.py  parameters.py  plot.py  simulation.py  util.py
src/rtm_wrapper/engines/: __init__.py  base.py  dummy.py  sixs.py
src/rtm_wrapper/engines/sixs/: __init__.py  _impl.py  _py6s.py
src/rtm_wrapper/parameters/: __init__.py  base.py  common.py  util.py
tests/: test_6s.py  test_simulation.py
