[tool.poetry]
name = "rtm-wrapper"
version = "0.1.0-dev"
description = ""
authors = ["Brian Schubert <schubert.b@northeastern.edu>"]
readme = "README.md"
packages = [
    { from = "src", include = "rtm_wrapper" }
]

[tool.poetry.dependencies]
# TODO test and relax dependency specifications
python = "^3.10"
py6s = "^1.9.2"
sixs-bin = { path = "extra/sixs-bin", optional = true }
nptyping = "^2.5.0"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
isort = "^5.12.0"
jupyter = "^1.0.0"
matplotlib = "^3.7.2"

[tool.poetry.extras]
6s = ["sixs-bin"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# Black config.
[tool.black]
# How many characters per line to allow.
# https://black.readthedocs.io/en/stable/the_black_code_style/current_style.html#line-length
line-length = 88
# Don't skip skip temporary sanity checks.
safe = true
# Python versions that should be supported by Black's output.
target-version = ["py310"]
# Set to true to preview style changes that may be added in black's next major release.
preview = false

# isort config.
[tool.isort]
profile = "black"
