[tool.poetry]
name = "rtm-wrapper"
version = "0.1.0-dev"
description = ""
authors = ["Brian Schubert <schubert.b@northeastern.edu>"]
readme = "README.md"
packages = [
    { from = "src", include = "rtm_wrapper" }
]

[tool.poetry.dependencies]
# TODO test and relax dependency specifications
python = "^3.9"
py6s = "^1.9.2"
nptyping = "^2.5.0"
typing-extensions = "^4.7.1"
# Note: this path is resolved to an absolute path in the distribution metadata.
# This will prevent pre-built distribution files (.tar.xz or .wheel) from working
# on more than one machine. For now we'll only support installing directly from
# the source tree when this extra is enabled.
sixs-bin = { path = "extra/sixs-bin", optional = true }

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
isort = "^5.12.0"
pytest = "^7.4.0"

[tool.poetry.group.nb.dependencies]
jupyter = "^1.0.0"
matplotlib = "^3.7.2"

[tool.poetry.extras]
6s = ["sixs-bin"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# Black config.
[tool.black]
# How many characters per line to allow.
# https://black.readthedocs.io/en/stable/the_black_code_style/current_style.html#line-length
line-length = 88
# Don't skip skip temporary sanity checks.
safe = true
# Python versions that should be supported by Black's output.
target-version = ["py310"]
# Set to true to preview style changes that may be added in black's next major release.
preview = false

# isort config.
[tool.isort]
profile = "black"

# mypy config.
[tool.mypy]
strict = true

[[tool.mypy.overrides]]
module = "Py6S.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "rtm_wrapper._6s"
warn_return_any = false
