[tool.poetry]
name = "sixs-bin"
version = "0.1.0a0"
description = "Wrapper for a local 6S binary."
authors = ["Brian Schubert <schubert.b@northeastern.edu>"]
readme = "README.md"
packages = [
    { from = "src", include = "sixs_bin" }
]
include = [
    "src/sixs_bin/sixsV1.1"
]
build = "build.py"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
